<resources>
    <string name="app_name">eRange</string>
    <string name="title_map">Map</string>
    <string name="title_parameters">Planning</string>
    <string name="title_summary">Summary</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_erange">Erange</string>
    <string name="action_settings">Settings</string>
    <string name="summaryfragment">SummaryFragment</string>
    <string name="parameterfragment">ParameterFragment</string>
    <string name="parameterinput">Route und Einstellungen</string>
    <string name="zielort">Zielort</string>
    <string name="startort">Startort</string>
    <string name="progressexplanation1">Du benötigst etwa</string>
    <string name="progressexplanation2">deines Akkus.</string>
    <string name="progressexplanation0"></string>
</resources>
