<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ParameterFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParameterFragment">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parameterinput"
            android:textSize="10pt">
        </TextView>
        <AutoCompleteTextView
            android:id="@+id/EditTextStart"
            android:layout_height="wrap_content"
            android:hint="@string/startort"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </AutoCompleteTextView>
        <AutoCompleteTextView
            android:id="@+id/EditTextEnd"
            android:layout_height="wrap_content"
            android:hint="@string/zielort"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent">
        </AutoCompleteTextView>
        <Spinner
        android:id="@+id/bikemodels_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

        <Button
            android:id="@+id/planroute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Plan Route!" />

        <TextView
            android:id="@+id/progressexplanation1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progressexplanation1"
            android:textSize="10pt"
            android:visibility="gone">

        </TextView>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_gravity="center"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleY="4"/>

        <TextView
            android:id="@+id/progressexplanation0"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progressexplanation0"
            android:textSize="10pt">
            android:visibility="gone"
        </TextView>
        <TextView
            android:id="@+id/progressexplanation2"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progressexplanation2"
            android:textSize="10pt"
            android:visibility="gone">

        </TextView>

    </LinearLayout>
</ScrollView>